--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,92 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~normalize.css';
+@import "./scss/variables";
+
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1,
+h2,
+h3 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+
+button {
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+}
+
+.mat-icon {
+    font-family: 'Material Icons';
+    font-style: normal;
+}
+
+input,
+select {
+    border: none;
+    padding: 0;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input:focus,
+select:focus {
+    outline: none;
+}
+
+.btn {
+   border: 2px solid $colorBlue;
+   border-radius: 5px;
+   color: $colorBlue;
+   line-height: 34px;
+   padding: 0 15px;
+
+   &--filled {
+       background-color: $colorBlue;
+       color: $colorWhite;
+   }
+}
+
+.btn-row {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+@media (max-width: 768px) {
+    .leaflet-top {
+        top: auto !important;
+        bottom: 10px;
+    }
+}
+
+.error-message {
+    font-size: 13px;
+    color: $colorRed;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
